Replaced placeholder images with project assets

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@ layout: homepage
   <div class="wrap">
     <div class="showcase">
       <div>
-        <img src="https://pbs.twimg.com/profile_images/472613395468791808/uOTxp6XJ.png">
+        <a href="/projects/"><img src="{{ site.baseurl}}/images/projects/EcoYeti.png" alt="EcoYeti Screenshot"></a>
       </div>
       <div>
-        <img src="https://pbs.twimg.com/profile_images/472613395468791808/uOTxp6XJ.png">
+        <a href="/projects/"><img src="{{ site.baseurl}}/images/projects/ZRoids.png"alt="ZombieRoids Screenshot"></a>
       </div>
       <div>
-        <img src="https://pbs.twimg.com/profile_images/472613395468791808/uOTxp6XJ.png">
+        <a href="/projects/"><img src="{{ site.baseurl}}/images/projects/packer.png" alt="SpritePacker Screenshot"></a>
       </div>
     </div>
   </div>
