Updated projects reel

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: homepage
         <a href="/projects/"><img src="{{ site.baseurl}}/images/projects/EcoYeti.png" alt="EcoYeti Screenshot"></a>
       </div>
       <div>
-        <a href="/projects/"><img src="{{ site.baseurl}}/images/projects/ZRoids.png"alt="ZombieRoids Screenshot"></a>
+        <a href="/game jams/"><img src="{{ site.baseurl}}/images/projects/IamH.png"alt="IamH Screenshot"></a>
       </div>
       <div>
         <a href="/projects/"><img src="{{ site.baseurl}}/images/projects/packer.png" alt="SpritePacker Screenshot"></a>
