--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@ layout: homepage
   <div class="wrap">
     <div class="showcase">
       <div>
+        <a class="darken" href="/projects/#V-Bound"><img src="{{ site.baseurl}}/images/projects/V-Bound.png" alt="V-Bound Screenshot"></a>
+      </div>
+      <div>
         <a class="darken" href="/game jams/#aie-x-campus-jam-of-2014"><img src="{{ site.baseurl}}/images/projects/EcoYeti.png" alt="EcoYeti Screenshot"></a>
       </div>
       <div>
         <a class="darken" href="/game jams/#global-game-jam-2014"><img src="{{ site.baseurl}}/images/projects/IamH.png"alt="IamH Screenshot"></a>
-      </div>
-      <div>
-        <a class="darken" href="/projects/#spritepacker"><img src="{{ site.baseurl}}/images/projects/packer.png" alt="SpritePacker Screenshot"></a>
       </div>
     </div>
   </div>
